<resources>
    <string name="app_name">TravelSkuy</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="ticket">Ticket</string>
    <string name="list">List</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flightticket">Flight Ticket</string>
    <string name="trainticket">Train Ticket</string>
    <string name="busticket">Bus Ticket</string>
    <string name="areaguide">Area Guide</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="boardingdate">Boarding Date</string>
    <string name="pasengger">Passenger</string>
    <string name="flighclass">Flight Class</string>
    <string name="pessenger">Passenger Class</string>
    <string name="ticketlist">Ticket List</string>
    <string name="flight">Flight</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="logout">Log Out</string>
    <string name="update">Update</string>
    <string name="camera">Camera</string>
    <string name="uploadfromgallery">Upload from Gallery</string>
    <string name="close">Close</string>
    <string name="mapbox_access_token">sk.eyJ1Ijoibm92YWxpenJhIiwiYSI6ImNrdjVoM2xoYTE2OWkydXMzNDZjbGN1MGcifQ.joaVeCx34x25sP4cRrzJUQ</string>
</resources>