<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btncamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kotakhitampanjang"
        app:backgroundTint="@color/black"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btngalery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kotakhitampanjang"
        app:backgroundTint="@color/abu"
        android:textColor="@color/black"
        android:text="@string/uploadfromgallery"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/kotakhitam"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        android:layout_marginBottom="10dp"
        android:id="@+id/btnclose"
        android:text="@string/close"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
</LinearLayout>