<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <import type="android.view.View"/>
        <variable
            name="register"
            type="com.travel.travelskuy.auth.RegisterActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:context=".auth.RegisterActivity">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/kotakinput"
            android:gravity="center"
            android:hint="@string/username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />


        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/kotakinput"
            android:gravity="center"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/edtusername"
            app:layout_constraintStart_toStartOf="@+id/edtusername"
            app:layout_constraintTop_toBottomOf="@+id/edtusername" />


        <EditText
            android:id="@+id/edtcfrpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/kotakinput"
            android:gravity="center"
            android:hint="@string/confirmpassword"
            app:layout_constraintEnd_toEndOf="@+id/edtpassword"
            app:layout_constraintStart_toStartOf="@+id/edtpassword"
            app:layout_constraintTop_toBottomOf="@+id/edtpassword" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:id="@+id/btnregister"
                android:background="@drawable/kotakhitam"
                android:text="@string/signup"
                app:backgroundTint="@color/black" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>