<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="setting"
            type="com.travel.travelskuy.ui.SettingFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:context=".ui.SettingFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blackkurang"
            android:orientation="vertical"
            android:background="@drawable/kotaklayout">


            <ImageView
                android:id="@+id/imgfoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/iconprofile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtnamauser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="User"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_light"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="@+id/imgfoto"
                app:layout_constraintStart_toStartOf="@+id/imgfoto"
                app:layout_constraintTop_toBottomOf="@+id/imgfoto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtnamauser">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/username"
                    android:id="@+id/edtusername"
                    android:background="@drawable/kotakinput"
                    android:gravity="center"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:id="@+id/edtemail"
                    android:hint="@string/email"
                    android:background="@drawable/kotakinput"
                    android:gravity="center"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/password"
                    android:id="@+id/edtpassword"
                    android:background="@drawable/kotakinput"
                    android:gravity="center"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:id="@+id/edtcfrpassword"
                    android:hint="@string/confirmpassword"
                    android:background="@drawable/kotakinput"
                    android:gravity="center"

                    />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/kotakhitam"
                    android:text="@string/update"
                    android:id="@+id/btnupdate"
                    android:layout_marginTop="20dp"
                    app:backgroundTint="@color/black" />


                <TextView
                    android:id="@+id/btnlogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/red"
                    android:fontFamily="@font/roboto_light"
                    android:textSize="20dp" />




            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>